--- a/style.css
+++ b/style.css
@@ -44,6 +44,10 @@ body.dark-mode .resumeTitle {
 body.dark-mode a.material-symbols-outlined {
   color: #f3e891;
 }
+body.dark-mode a.material-symbols-outlined {
+      text-shadow: 0 0 20px #f3e89177;
+}
+
 
 .material-symbols-outlined:hover {
       text-shadow: 0 0 20px #f3e89177;
@@ -277,6 +281,10 @@ h4.title a {
 text-shadow: 0 0 20px #eeeeee77;
     transition: ease-in, 0.3s;
 
+}
+
+h5 > #darkModeToggle > .icon-toggle {
+  text-shadow: 0 0 20px #eeeeee77;
 }
 
 .material-symbols-outlined {
