--- a/style.css
+++ b/style.css
@@ -745,8 +745,8 @@ text-shadow: 0 0 20px #eeeeee77;
     left: 0;
     width: 100vw;
     height: 100vh;
-    background: rgba(0, 0, 0, 0.95);
-    color: white;
+    background: #ffffff;
+    color: #222831;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -757,7 +757,10 @@ text-shadow: 0 0 20px #eeeeee77;
     transition: opacity 0.3s ease, visibility 0.3s ease;
     z-index: 9999;
 }
-
+body.dark-mode .full-screen-menu {
+  background-color: #222831;
+  color: #eeeeee;
+  }
 .full-screen-menu.active {
     opacity: 1;
     visibility: visible;
@@ -774,13 +777,18 @@ text-shadow: 0 0 20px #eeeeee77;
 .close-btn {
     position: absolute;
     top: 1rem;
-    right: 1rem;
+    right: 2rem;
     font-size: 2rem;
     background: none;
     border: none;
-    color: white;
+    color: #222831;
     cursor: pointer;
 }
+  
+  body.dark-mode .close-btn {
+        color: #eeeeee;
+
+  }
 .full-screen-menu nav {
     display: flex;
     flex-direction: column;
